[gd_scene load_steps=3 format=3 uid="uid://sql_injection_scene"]

[ext_resource type="Script" path="res://scenes/minigames/sql_injection/sql_injection_defender.gd" id="1"]
[ext_resource type="Resource" uid="uid://sql_query_db" path="res://resources/minigames/sql_injection/sql_query_database.tres" id="2"]

[node name="SQLInjectionDefender" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
query_database = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ConsultasLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "üìä Consulta: 1/15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VidasLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ù§Ô∏è Vidas: 3/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PuntosLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚≠ê Puntos: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TiempoLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚è±Ô∏è 00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/ProgressContainer"]
layout_mode = 2
text = "Progreso:"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBoxContainer/ProgressContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="QueryContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/VBoxContainer/QueryContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/QueryContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Consulta SQL Base:"

[node name="QueryDisplay" type="Label" parent="Panel/VBoxContainer/QueryContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "SELECT * FROM users WHERE username = '{INPUT}'"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="InputContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/InputContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Input del Usuario:"

[node name="InputDisplay" type="Label" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "admin"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SQLPreviewContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="SQLPreview" type="Label" parent="Panel/VBoxContainer/SQLPreviewContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SQL Resultante:
SELECT * FROM users WHERE username = 'admin'"
vertical_alignment = 1
autowrap_mode = 3

[node name="HintContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="HintLabel" type="Label" parent="Panel/VBoxContainer/HintContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ResultadoLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BtnMalicioso" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üö® SQL Injection"

[node name="BtnSeguro" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚úÖ Consulta Segura"

[node name="BtnPista" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "üí° Pista"

[node name="BtnSiguiente" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
visible = false
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚û°Ô∏è Siguiente"

[node name="TimerJuego" type="Timer" parent="."]
wait_time = 600.0
one_shot = true

[node name="TimerResultado" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/BtnMalicioso" to="." method="_on_btn_malicioso_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/BtnSeguro" to="." method="_on_btn_seguro_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/BtnPista" to="." method="_on_btn_pista_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/BtnSiguiente" to="." method="_on_btn_siguiente_pressed"]
[connection signal="timeout" from="TimerResultado" to="." method="_on_timer_resultado_timeout"]
